--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,15 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v8:0.7.0'
 
     implementation("com.squareup.moshi:moshi-kotlin:1.9.2")
+
+    implementation "androidx.room:room-ktx:$versions.room"
+    implementation "androidx.room:room-runtime:$versions.room"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.60"
+
+    implementation "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle"
+
+    implementation "androidx.work:work-runtime-ktx:$versions.work"
+
 }
