--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,11 @@ versions.coroutines = "1.1.1"
 versions.databinding = "3.1.0-alpha10"
 versions.design_support = "28.0.0"
 
+
+versions.lifecycle = "2.2.0-rc02"
+versions.room = "2.2.1"
+versions.work = "2.2.0"
+
 // Language dependencies
 versions.kotlin = "1.3.21"
 versions.ktlint = "0.28.0"
