--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,15 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.2.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v8:0.7.0'
 
-    implementation("com.squareup.moshi:moshi-kotlin:1.9.2")
+    implementation "com.squareup.moshi:moshi:$versions.moshi"
+
+    implementation "com.squareup.moshi:moshi-kotlin:$versions.moshi"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$versions.moshi"
 
     implementation "androidx.room:room-ktx:$versions.room"
     implementation "androidx.room:room-runtime:$versions.room"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    kapt "androidx.room:room-compiler:$versions.room"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.60"
 
@@ -61,5 +66,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle"
 
     implementation "androidx.work:work-runtime-ktx:$versions.work"
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
