--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,9 @@ versions.coroutines = "1.1.1"
 versions.databinding = "3.1.0-alpha10"
 versions.design_support = "28.0.0"
 
-
+versions.moshi = "1.7.0"
 versions.lifecycle = "2.2.0-rc02"
-versions.room = "2.2.1"
+versions.room = "2.2.2"
 versions.work = "2.2.0"
 
 // Language dependencies
